Fix header spacing

--- a/frontend/src/main.css
+++ b/frontend/src/main.css
@@ -17,3 +17,7 @@
 	width: 400px;
 	height: 400px;
 }
+
+.head {
+	margin: 15px;
+}
